--- a/has-one.mdx
+++ b/has-one.mdx
@@ -16,9 +16,9 @@ One-to-one relationships are specified via the function
 `has_one`, where the first argument specifies a function returning
 how to join the tables.
 
-##Recommended Implementation
+## Recommended Implementation
 
-Specified below is the simplest way to demonstrate a join.
+Specified below is the simplest way to demonstrate a join for a has-one relationship.
 
 ```py
 from chalk.features import features
