--- a/fraud-2.mdx
+++ b/fraud-2.mdx
@@ -92,7 +92,7 @@ restrictions.
 
 Next up, we'll define a related feature class to our users.
 We'll call this class `Account` and it will represent
-a bank account that a user has.
+a bank account that a user owns.
 
 ```python src/models.py
 from chalk.features import features
@@ -128,7 +128,7 @@ class Account:
 ```
 
 This denotes that each account has one user, and that the
-`Account.user_id` and the `User.id` are equal and of type `int`.
+`Account.user_id` and the `User.id` are equal and of type `int`, as described by `Account.user_id`.
 
 Once we've defined the relationship on one side of the
 join, we can define the inverse relationship on the
@@ -156,8 +156,8 @@ transaction is linked to a single account. We'll define the
 `Transaction` class and link it to our `Account` class as follows:
 
 ```diff-py src/models.py
-- from chalk.features import features, has_one
-+ from chalk.features import features, has_one, has_many
+- from chalk.features import features
++ from chalk.features import features, DataFrame
 
 + class TransactionStatus(str, Enum):
 +     PENDING = "pending"
@@ -168,7 +168,7 @@ transaction is linked to a single account. We'll define the
 + class Transaction:
 +    id: int
 +
-+    # The id of the account that this transaction belongs to.
++    # The id of the account that this transaction belongs to, set to a join.
 +    account_id: "Account.id"
 +
 +    # The amount of the transaction, in dollars.
