Update gcp permissions

--- a/gcp-cloud-deployment.mdx
+++ b/gcp-cloud-deployment.mdx
@@ -135,6 +135,7 @@ compute.forwardingRules.delete
 compute.forwardingRules.get
 compute.forwardingRules.list
 compute.globalAddresses.create
+compute.globalAddresses.createInternal
 compute.globalAddresses.get
 compute.globalAddresses.list
 compute.globalForwardingRules.get
@@ -242,10 +243,13 @@ compute.resourcePolicies.delete
 compute.resourcePolicies.get
 compute.resourcePolicies.list
 compute.resourcePolicies.use
+compute.routers.create
 compute.routers.delete
 compute.routers.get
 compute.routers.list
+compute.routers.list
 compute.routers.update
+compute.routers.use
 compute.routes.create
 compute.routes.delete
 compute.routes.list
