--- a/security.mdx
+++ b/security.mdx
@@ -103,12 +103,11 @@ unauthorized access.
 
 We use separate AWS accounts and GCP projects for segregated
 environments, and strictly control IAM access to environments using
-the [principle of least
-privilege](https://www.google.com/search?q=principle+of+least+privilege&oq=principle+of+least+p&aqs=chrome.0.0i512j69i57j0i512l8.1378j0j7&sourceid=chrome&ie=UTF-8).
+the [principle of least privilege](https://www.google.com/search?q=principle+of+least+privilege&oq=principle+of+least+p&aqs=chrome.0.0i512j69i57j0i512l8.1378j0j7&sourceid=chrome&ie=UTF-8).
 
 ### Encryption
 
-At Chalk we use encryption mechanisms to protect customer data. Chalk
+At Chalk, we use encryption mechanisms to protect customer data. Chalk
 makes use of GCP and AWS services to manage encryption of data at rest
 and in transit. Data at rest is encrypted using AES 256-bit
 encryption. Data in transit is protected using TLSv1.2 or higher, and
