--- a/sql.mdx
+++ b/sql.mdx
@@ -52,7 +52,7 @@ matches the PostgreSQL table name. The comments are `yaml`-parsed to provide oth
 Chalk to decide how to design the resolver.
 
 SQL file resolvers can also return multiple rows for aggregation operations, offline queries, and more.
-Notice below the omission of the `count` argument and the `where` clause of the SQL query.
+Notice below the omissions of the `count` argument and the `where` clause of the SQL query.
 
 ```sql get_users.chalk.sql
 -- type: online
