--- a/faq.mdx
+++ b/faq.mdx
@@ -3,6 +3,12 @@ title: Frequently Asked Questions
 description: A collection of questions frequently asked by customers
 ---
 
+---
+
+## Getting support
+
+Don't see your question answered? Please out via your support channel and we will
+be happy to help.
 
 ### What is the difference between an `online` and `offline` resolver?
 
