--- a/faq.mdx
+++ b/faq.mdx
@@ -7,7 +7,7 @@ description: A collection of questions frequently asked by customers
 
 ## Getting support
 
-Don't see your question answered? Please out via your support channel and we will
+Don't see your question answered? Please reach out via your support channel and we will
 be happy to help.
 
 ### What is the difference between an `online` and `offline` resolver?
