--- a/aws-cloud-deployment.mdx
+++ b/aws-cloud-deployment.mdx
@@ -169,7 +169,7 @@ but Chalk requires ongoing access to update the software deployed in your enviro
 
 ### Kubernetes Permissions
 
-Chalk requires the following Kubernetes permissions to manage the resources in your cluster:
+Chalk requires the following Kubernetes roles to manage the resources in your cluster:
 
 ```yaml
 kind: ClusterRole
