--- a/features.mdx
+++ b/features.mdx
@@ -9,7 +9,7 @@ import { highlightedCode as featureTimeCode } from '@/samples/features/feature_t
 
 ---
 
-Chalk lets you spell our your features directly in Python.
+Chalk lets you spell out your features directly in Python.
 Features are namespaced to a `FeatureSet`.
 To create a new `FeatureSet`, apply the `@features`
 decorator to a Python class with typed attributes.
