Hide switch on gcp deployment page

--- a/aws-cloud-deployment.mdx
+++ b/aws-cloud-deployment.mdx
@@ -26,7 +26,7 @@ data teams for training set generation.
 
 ## Architecture
 
-<ServiceDiagramSwitcher default_option={"AWS"} hideSwitch={true} />
+<ServiceDiagramSwitcher default_option={"AWS"} hideSwitch />
 
 ---
 
