--- a/gcp-cloud-deployment.mdx
+++ b/gcp-cloud-deployment.mdx
@@ -26,7 +26,7 @@ data teams for training set generation.
 
 ## Architecture Diagram
 
-<ServiceDiagramSwitcher default_option={"GCP"} />
+<ServiceDiagramSwitcher default_option={"GCP"} hideSwitch />
 
 ---
 
