--- a/aws-cloud-deployment.mdx
+++ b/aws-cloud-deployment.mdx
@@ -167,7 +167,7 @@ In principle, Chalk does not require ongoing access to data, or to the ability t
 but Chalk requires ongoing access to update the software deployed in your environment.
 
 
-### Kubernetes Permissions
+### Kubernetes
 
 Chalk requires the following Kubernetes roles to manage the resources in your cluster:
 
