--- a/has-many.mdx
+++ b/has-many.mdx
@@ -35,7 +35,7 @@ class User:
     transfers: DataFrame[Transfer]
 ```
 
-This denotes that a user has many transactions, and that `User.uid` is of type `str` and equals `Transfer.user_id`.
+This denotes that a user has many transfers, and that `User.uid` is of type `str` and equals `Transfer.user_id`.
 
 ### Explicit Join
 
